# IntelliFlight

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: airport_mappings.json  get_historical_weather_data.py
data/historical/flights/: Documentation.csv
data/maps/: L_UNIQUE_CARRIERS.csv  temp_ranges.csv  wind_speeds.csv
data/models/: bayes_net.model - Copy.json  bayes_net.model.json  bayes_net.model.json.bak
data/raw/airports/: L_AIRPORT.csv
data/util/: L_AIRPORT_ID.csv  map_airports.py  wikitable.csv
intelliflight/: GUI.py  __main__.py  constants.py
intelliflight/models/: ai_model.py  bayes_net.py
intelliflight/preprocessing/: __init__.py  get_historical_weather_data.py  map_airports.py
intelliflight/util/: datautil.py  nws_manager.py
src/: ai_model.py  bayes_net.py  nws_manager.py  weather_api_manager.py
src/intelliflight/: GUI.py  __main__.py  constants.py
src/intelliflight/models/: ai_model.py  bayes_net.py  bayes_net_DEPRECATED.py  decision_tree.py
src/intelliflight/models/components/: dataset.py  frequencycounter.py  keymeta.py  ptables.py
src/intelliflight/preprocessing/: __main__.py  get_historical_weather_data.py  map_airports.py
src/intelliflight/util/: datautil.py  nws_manager.py  typeutil.py
src/test/: nws_coverage_test.py
test/: nws_coverage_testOLD.py  nws_coverage_tester.py
test/data/: FLIGHT_DATA_TRUNCATED.csv  bad_airport_mappings.json  fifty_flights.json  freq_test_data.json  historical_flights.csv  historical_flights_no_tmp_or_wnd.csv  historical_flights_no_weather.csv  historical_flights_seen_carriers_airports.csv  historical_flights_unmapped_src_dst.csv  historical_weather_by_bts.json  sample_ptables.json  valid_airport_mappings.json
test/unit/: bayes_net_unit_test.py  dataset_unit_test.py  datautil_unit_test.py  frequencycounter_unit_test.py  keymeta_unit_test.py  nws_manager_unit_test.py  ptables_unit_test.py
