[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelliflight"
version = "1.0.0"
authors = [
    { name="Drew Barlow", email="drbarlow@umich.edu" },
    { name="Ethan Pelkie", email="epelk@umich.edu" },
]
description = "A tool to predict flight delays, diversions, and cancellations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Drew-Barlow/IntelliFlight/"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = "test"

markers = [
    "unit: function is part of the unit test suite"
]